--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vite": "^5.2.9"
   },
   "dependencies": {
+    "@react-pdf-viewer/core": "3.12.0",
+    "pdfjs-dist": "3.4.120",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^9.0.0"
