--- a/package.json
+++ b/package.json
@@ -13,13 +13,21 @@
     "@types/react-dom": "^18.2.25",
     "@vitejs/plugin-react": "^4.2.1",
     "typescript-plugin-css-modules": "^5.1.0",
-    "vite": "^5.2.9"
+    "vite": "^6.2.0"
   },
   "dependencies": {
     "@react-pdf-viewer/core": "3.12.0",
+    "@tailwindcss/vite": "^4.0.12",
+    "@vitejs/plugin-react": "^4.3.4",
+    "clsx": "^2.1.1",
     "pdfjs-dist": "3.4.120",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pdf": "^9.0.0"
+    "react-icons": "^5.5.0",
+    "react-pdf": "^9.0.0",
+    "react-router": "^7.3.0",
+    "tailwind-merge": "^3.0.2",
+    "tailwindcss": "^4.0.12",
+    "zustand": "^5.0.3"
   }
 }
